--- a/design.html
+++ b/design.html
@@ -1,10 +1,41 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="author" content="Caring Cinema Team">
+	<meta name="description" content="design">
+	<meta name="keywords" content="design">
+<title>Design</title>
 </head>
 
 <body>
+	<header>
+		<img src="caringcinema.png" alt="caring cinema logo" title="caring cinema">
+		<h1>Caring Cinema</h1>
+	</header>
+		
+	<nav>
+		<a href="home.html">HOME</a>
+		<a href="nowshowing.html">NOW SHOWING</a>
+		<span>TICKET</span>
+	</nav>
+		<section>
+		<h2>Home page</h2>
+		<p>One movie with video and its descripton form a block, now showing and upcoming movies form a block</p>
+		<h2>Now showing page</h2>
+		<p>Group the movies and map into different blocks, alternative texts are provided for the map images.</p>
+		<h2>Ticket page</h2>
+		<p>Use &lt;table&gt; to display the seats at the cinema, confirm button used instead of &lt;a&gt; tag.</p>
+		<h2>Print page</h2>
+		<p>Group different movies into different &lt;form&gt;, pre-set text in the type box.</p>
+		</section>
+	<footer>
+		<p>
+			<span class="copyright">@Copyright of resources belong to the corresponding copyright owners - fair use education purpose</span> |
+			<a href="home.html">Home |</a>
+			<a href="design.html">Design |</a>
+			<a href="mailto:lekshyuen@gmail.com">Email Us</a>
+		</p>
+	</footer>
 </body>
 </html>
