--- a/home.html
+++ b/home.html
@@ -1,27 +1,32 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="author" content="Caring Cinema Team">
+	<meta name="description" content="home page">
+	<meta name="keywords" content="home page">
 <title>Home</title>
 </head>
 
 <body>
 	<header id="home">
-		<img src="filmreel.png">
-		<h1>City Cinema</h1>
+		<img src="caringcinema.png" alt="caring cinema logo" title="caring cinema">
+		<h1>Caring Cinema</h1>
 	</header>
 	
 	<nav>
 		<span>HOME</span>
-		<a href="nowshsowing.html">NOW SHOWING</a>
+		<a href="nowshowing.html">NOW SHOWING</a>
 		<a href="ticket.html">TICKET</a>
 	</nav>
 	<section>
 	<div>
-		<h2>Big Buck - Trailer</h2>
-		<p>Cast: Andreas Gruschke</p>
-		<p>Director: Sacha Goedegebure</p>
-		<p>Duration: 125 mins</p>
+			<ul>
+				<li class="moviename">Movie name: Big Buck</li>
+				<li>Cast: Andreas Gruschke</li>
+				<li>Director: Sacha Goedegebure</li>
+				<li>Duration: 125 mins</li>
+			</ul>
 		<video controls poster="bigbuck.jpg">
 			<source src="https://courses.cs.cityu.edu.hk/cs2204/example/video/BigBuck.mp4" type="video/mp4">
 			<source src="https://courses.cs.cityu.edu.hk/cs2204/example/video/BigBuck.ogg" type="video/ogg">
@@ -33,26 +38,32 @@
 		<h3>Now showing</h3>
 		<div>
 			<img src="wonder.jpg" alt="wonder">
-			<p>Movie name: Wonder</p>
-			<p>Cast: Jacob Tremblay, Julia Roberts</p>
-			<p>Director: Stephen Chbosky</p>
-			<p>Duration: 113 mins</p>
+			<ul>
+				<li class="moviename">Movie name: Wonder</li>
+				<li>Cast: Jacob Tremblay, Julia Roberts</li>
+				<li>Director: Stephen Chbosky</li>
+				<li>Duration: 113 mins</li>
+			</ul>
 		</div>
 		
 		<div>
 			<img src="nature.jpg" alt="nature">
-			<p>Movie name: Nature</p>
-			<p>Cast: Tom Holland, Tobey Maguire</p>
-			<p>Director: Benedict Cumberbatch</p>
-			<p>Duration: 115 mins</p>
+			<ul>
+				<li class="moviename">Movie name: Nature</li>
+				<li>Cast: Tom Holland, Tobey Maguire</li>
+				<li>Director: Benedict Cumberbatch</li>
+				<li>Duration: 115 mins</li>
+			</ul>
 		</div>
 		
 		<div>
 			<img src="wonder.jpg" alt="wonder">
-			<p>Movie name: Wonder</p>
-			<p>Cast: Andrew Garfield, Zendaya</p>
-			<p>Director: Angourie Rice</p>
-			<p>Duration: 113 mins</p>
+			<ul>
+				<li class="moviename">Movie name: Wildlife</li>
+				<li>Cast: Andrew Garfield, Zendaya</li>
+				<li>Director: Angourie Rice</li>
+				<li>Duration: 113 mins</li>
+			</ul>
 		</div>
 	</div>
 	
@@ -60,32 +71,39 @@
 		<h3>Upcoming</h3>
 		<div>
 			<img src="barbecue.jpg" alt="barbeque">
-			<p>Movie name: Barbecue</p>
-			<p>Cast: Marisa Tomei, Willem Dafoe</p>
-			<p>Director: Rhys Ifans</p>
-			<p>Duration: 134 mins</p>
+			<ul>
+				<li class="moviename">Movie name: Barbecue</li>
+				<li>Cast: Marisa Tomei, Willem Dafoe</li>
+				<li>Director: Rhys Ifans</li>
+				<li>Duration: 134 mins</li>
+			</ul>
 		</div>
 		<div>
 			<img src="wonder.jpg" alt="wonder">
-			<p>Movie name: Wonder</p>
-			<p>Cast: Jacob Batalon, Thomas Haden</p>
-			<p>Director: Tom Hardy</p>
-			<p>Duration: 129 mins</p>
+			<ul>
+				<li class="moviename">Movie name: Spider</li>
+				<li>Cast: Jacob Batalon, Thomas Haden</li>
+				<li>Director: Tom Hardy</li>
+				<li>Duration: 129 mins</li>
+			</ul>
 		</div>
 		<div>
 			<img src="casablanca.png" alt="casablanca">
-			<p>Movie name: Wonder</p>
-			<p>Cast: Alfred Molina, Jamie Foxx</p>
-			<p>Director: Anthony Robert</p>
-			<p>Duration: 121 mins</p>
+			<ul>
+				<li class="moviename">Movie name: Casablanca</li>
+				<li>Cast: Alfred Molina, Jamie Foxx</li>
+				<li>Director: Anthony Robert</li>
+				<li>Duration: 121 mins</li>
+			</ul>
 		</div>
 	</div>
 	</section>
 	<footer>
 		<p>
-			Footer: @Copyright of resources belong to the corresponding copyright owners - fair use education purpose |
-			<a href="#home">Home |</a>
-			<a href="design.html">Design</a>
+			<span class="copyright">@Copyright of resources belong to the corresponding copyright owners - fair use education purpose</span> |
+			<a href="home.html">Home |</a>
+			<a href="design.html">Design |</a>
+			<a href="mailto:lekshyuen@gmail.com">Email Us</a>
 		</p>
 	</footer>
 </body>
