--- a/nowshowing.html
+++ b/nowshowing.html
@@ -1,14 +1,17 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="author" content="Caring Cinema Team">
+	<meta name="description" content="now showing movies">
+	<meta name="keywords" content="now showing movies">
 <title>Now Showing</title>
 </head>
 
 <body>
 	<header>
-		<img src="filmreel.png" alt="city cinema" title="City Cinema">
-		<h1>City Cinema</h1>
+		<img src="caringcinema.png" alt="caring cinema logo" title="caring cinema">
+		<h1>Caring Cinema</h1>
 	</header>
 	
 	<nav>
@@ -86,25 +89,21 @@
 	<div>
 		<h3>Cinemas location</h3>
 		<p>City Cinema - Festival Walk</p>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14761.730086202955!2d114.1741319!3d22.3372917!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x801f9ed36c6b0afc!2sFestival%20Grand%20Cinema!5e0!3m2!1szh-CN!2shk!4v1645249780045!5m2!1szh-CN!2shk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-		<p>Your browser does not support iframe.</p>
-		</iframe>
+		<img src="fwmap.jpg" alt="festival walk">
 		
 		<p>City Cinema - City Plaza</p>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14767.196588572535!2d114.2171998!3d22.285597!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xaad9b80d58022a6f!2sMOViE%20MOViE%20Cityplaza!5e0!3m2!1szh-CN!2shk!4v1645250272016!5m2!1szh-CN!2shk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-		<p>Your browser does not support iframe.</p>
-		</iframe>
+		<img src="cpmap.jpg" alt="city plaza">
 		
 		<p>City Cinema - Grand Plaza</p>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14768.067161986131!2d114.22082896977538!3d22.277353800000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34040178790b14b7%3A0xa7bc81ae33230654!2sL%20Cinema!5e0!3m2!1szh-CN!2shk!4v1645250382944!5m2!1szh-CN!2shk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"><p>Your browser does not support iframe.</p>
-		</iframe>
+		<img src="gpmap.jpg" alt="grand plaza">
 	</div>
 	
 	<footer>
 		<p>
-			Footer: @Copyright of resources belong to the corresponding copyright owners - fair use education purpose |
+			<span class="copyright">@Copyright of resources belong to the corresponding copyright owners - fair use education purpose</span> |
 			<a href="home.html">Home |</a>
-			<a href="design.html">Design</a>
+			<a href="design.html">Design |</a>
+			<a href="mailto:lekshyuen@gmail.com">Email Us</a>
 		</p>
 	</footer>
 </body>
