--- a/print.html
+++ b/print.html
@@ -1,19 +1,22 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="author" content="Caring Cinema Team">
+	<meta name="description" content="print ticket">
+	<meta name="keywords" content="print ticket">
+<title>Print ticket</title>
 </head>
 
 <body>
 	<header>
-		<img src="filmreel.png">
-		<h1>City Cinema</h1>
+		<img src="caringcinema.png" alt="caring cinema logo" title="caring cinema">
+		<h1>Caring Cinema</h1>
 	</header>
 	
 	<nav>
 		<a href="home.html">HOME</a>
-		<a href="nowshsowing.html">NOW SHOWING</a>
+		<a href="nowshowing.html">NOW SHOWING</a>
 		<a href="ticket.html">TICKET</a>
 	</nav>
 	
@@ -47,9 +50,10 @@
 	
 	<footer>
 		<p>
-			Footer: @Copyright of resources belong to the corresponding copyright owners - fair use education purpose |
+			<span class="copyright">@Copyright of resources belong to the corresponding copyright owners - fair use education purpose</span> |
 			<a href="home.html">Home |</a>
-			<a href="design.html">Design</a>
+			<a href="design.html">Design |</a>
+			<a href="mailto:lekshyuen@gmail.com">Email Us</a>
 		</p>
 	</footer>
 </body>
