--- a/ticket.html
+++ b/ticket.html
@@ -1,19 +1,22 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="author" content="Caring Cinema Team">
+	<meta name="description" content="movie ticket">
+	<meta name="keywords" content="movie ticket">
 <title>Ticket</title>
 </head>
 
 <body>
 	<header>
-		<img src="filmreel.png">
-		<h1>City Cinema</h1>
+		<img src="caringcinema.png" alt="caring cinema logo" title="caring cinema">
+		<h1>Caring Cinema</h1>
 	</header>
 	
 	<nav>
 		<a href="home.html">HOME</a>
-		<a href="nowshsowing.html">NOW SHOWING</a>
+		<a href="nowshowing.html">NOW SHOWING</a>
 		<span>TICKET</span>
 	</nav>
 	
@@ -51,15 +54,18 @@
 		<div>
 			<p>Seat Booked</p>
 			<p>B1, B2</p>
-			<a href="print.html">Comfirm</a>
 		</div>
+		<form action="print.html">
+			<button>Confirm</button>
+		</form>
 	</div>
 	
 	<footer>
 		<p>
-			Footer: @Copyright of resources belong to the corresponding copyright owners - fair use education purpose |
+			<span class="copyright">@Copyright of resources belong to the corresponding copyright owners - fair use education purpose</span> |
 			<a href="home.html">Home |</a>
-			<a href="design.html">Design</a>
+			<a href="design.html">Design |</a>
+			<a href="mailto:lekshyuen@gmail.com">Email Us</a>
 		</p>
 	</footer>
 </body>
