--- a/design.html
+++ b/design.html
@@ -17,17 +17,17 @@
 	<nav>
 		<a href="home.html">HOME</a>
 		<a href="nowshowing.html">NOW SHOWING</a>
-		<span>TICKET</span>
+		<a href="ticket.html">TICKET</a>
 	</nav>
 		<section>
 		<h2>Home page</h2>
-		<p>One movie with video and its descripton form a block, now showing and upcoming movies form a block</p>
+		<p>One movie with video and its descripton form a block, now showing and upcoming movies form a block, all movies have details included.</p>
 		<h2>Now showing page</h2>
-		<p>Group the movies and map into different blocks, alternative texts are provided for the map images.</p>
+		<p>Form created with function of cinemas selection and buy ticket button that will link to ticket.html, screenshot of google map of 3 cinemas location</p>
 		<h2>Ticket page</h2>
-		<p>Use &lt;table&gt; to display the seats at the cinema, confirm button used instead of &lt;a&gt; tag.</p>
+		<p>Pre-set movies information, a comfirm button that will link to print.html</p>
 		<h2>Print page</h2>
-		<p>Group different movies into different &lt;form&gt;, pre-set text in the type box.</p>
+		<p>Group different movies into different &lt;form&gt;, pre-set tickets information in the type box.</p>
 		</section>
 	<footer>
 		<p>
