--- a/nowshowing.html
+++ b/nowshowing.html
@@ -66,6 +66,25 @@
 		</select>
 		<a href="ticket.html">Buy Ticket</a>
 		<br>
+		<img src="nature.jpg" alt="nature" title="nature">
+		<label for="nauremovie">Movie name: </label>
+		<input id="naturemovie" type="text" name="movie" value="nature"> <br>
+		<label for="naturedate">Date:</label>
+		<select id="naturedate" name="naturedate">
+			<option value="20may">20 May, Tue</option>
+			<option value="23may">23 May, Thu</option>
+			<option value="26may">26 May, Sun</option>
+		</select>
+		<br>
+		<label for="naturetime">Show Time: </label>
+		<select id="naturetime" name="naturetime">
+			<option value="0830">08:30 AM</option>
+			<option value="1030">10:30 AM</option>
+			<option value="1130">11:30 AM</option>
+			<option value="2130">09:30 PM</option>
+		</select>
+		<a href="ticket.html">Buy Ticket</a>
+		<br>
 		<img src="wildlife.jpg" alt="wildlife" title="wildlife">
 		<label for="wildlifemovie">Movie name: </label>
 		<input id="wildlifemovie" type="text" name="movie" value="Wildlife"> <br>
